--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "type": "module",
     "scripts": {
+        "postinstall": "keycloakify sync-extensions",
         "dev": "vite",
         "build": "tsc && vite build",
         "build-keycloak-theme": "npm run build && keycloakify build",
@@ -19,7 +20,8 @@
     "dependencies": {
         "keycloakify": "^11.13.2",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "@keycloakify/email-native": "~260007.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
